apps/infra/uptime-kuma/resources/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-kuma
  annotations:
    argocd.argoproj.io/sync-wave: "-4"
