apps/infra/uptime-kuma/resources/external-dns.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: uptime-kuma-extname
    annotations:
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:AbBQxHzBboGlFYguPW41led7yspW0vIqq3wc1NfC44k2gGEZ,iv:WvrBz5U5D2oqbjYRcnFXRBW8MEuzFCl3YJXcKYdAFaA=,tag:RW4obOseniULw1Sc3Oibuw==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
spec:
    type: ExternalName
    externalName: ENC[AES256_GCM,data:pV3QpT0QgGrlmStva4yO/5kG+ZjbsNKZl0iTWI1+JWoLqoH2,iv:5XbAyqTCVL01Nh1meuAPh1eQXCM+Qb7IGjxZWgVTQfQ=,tag:6remAyVugdA1HneFVIE/hA==,type:str]
    sessionAffinity: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTc09HMEFWeHpYVWtUUFFD
[...]
            OMGy0fE7sL08FwJRR8tmCXE27mmyC68la4ouWj/sSTriUwkhSpHDPw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-24T12:44:11Z"
    mac: ENC[AES256_GCM,data:sE0Z3ihw2HF1+j+MLRHZFtHHE7YsiP4sYYerHFqUYbyWWqn1NxyQHMQpElJz8+zldGFJhZuVM4sjAM0388y5Jvye+yMNntVWeRlHpRjNF7/HWP1OiY9Gu3+K1BNGZAJ3KV8HU2O8aQFVJTi1yPhLMMI8RTsMHOKlB/8GciOM7pI=,iv:J0dpBw4j9ZtgbmzEPQQ4tHCn363zqExZUBo17EhPwvQ=,tag:pW301bMX5HT+rXOhrt0VvQ==,type:str]
    pgp:
        - created_at: "2024-06-22T20:23:04Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/8C0u19tMYmqcn5WqZ9IIubogZ+p2TCDjkp+wWPg4JEonr
[...]
            =hyHf
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
