apps/infra/uptime-kuma/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: uptime.monitoring.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:Z7VhYtGmpBUYnNuFfsGYijp+9qxLFskxyn1eamvp8+Ol3Svf,iv:mMrweKNwYulz6gYeOshT5z8vvdEmNhxYDz8VIPSw/HQ=,tag:e8yCupGnU1+9Cf+JtIwsAQ==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:0mFUn7C5XXfhS9yKL+aLXtNdxcXn917vi/g+Bac=,iv:gXCejJ9PFa7NeVD3U3EtKGw4yAisXk3mY6JGQOnNWCk=,tag:BxUbIeXr2VsSjlQ51IgvvQ==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: uptime-kuma
    namespace: uptime-kuma
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:U+Q4VWo9+iv/saOfDe3iCtAK0bFVl1rC/xcFippPErN35luxbrdX0LIXgf4=,iv:LEsVmvK1o8s9tigPTfGUxo1DnQ/ZnHa9Ai5YZglFcCo=,tag:46pdtxq2Qi5brXa60iNjZA==,type:str]
          middlewares:
            - name: security
              namespace: traefik
          services:
            - kind: TraefikService
              name: uptime-kuma
              namespace: uptime-kuma
    tls:
        domains:
            - main: ENC[AES256_GCM,data:Kk9G4H0lQA0AUVxHaMEyxCSeBJkpXJaU+xcDOeI=,iv:yh/u1k4a1/J/ZMlSZ85QickD9Ua5jwTec8ZzX+vcvvM=,tag:2snI3ZUlEYVsf4Ju0V94NQ==,type:str]
              sans:
                - ENC[AES256_GCM,data:071bFjk8b0l2pG/Z9lw6JEsm1rCc+fsUxRouPq9n,iv:EncLpqmVRyWUSaxs/pFlFnwfVN8s+Eqx0K7qzzwulzQ=,tag:ZQwRO8QeBQhIQzyS+nEJMw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: uptime-kuma-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3MktGMlN2bjZJMTFMajV4
[...]
            w8c5qHh01uQHiHi1U4QFQUizRjNVib9Gu0ehqrwESX3eqgfzKH5jww==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-09-13T14:18:54Z"
    mac: ENC[AES256_GCM,data:KzyW/GDaLGYWPuQm2iNZVqkyzzvMw6xvB/q4pp+iazR9GfPz/AGI1zW+e/27lspck/6hRJBtyUeiEMYEcTlQUglRnAPDujgKg5zxKaQicCZpuklnSSqSxdL2jk3aNiAZjRfuI3sjovi2tWP93GQ1Om7ZebN9GChfXsOGQz411WU=,iv:YTeBQ4iXECjSUg1ruvbGgQyIVP/vt9sSil0o75a/iYw=,tag:u6FLOvQKhI4+ULUukYLz3w==,type:str]
    pgp:
        - created_at: "2024-06-22T20:24:01Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//ckdUFF47JENHLxFJOHZDfsPBDa38fqH2UMJ+x0+OW12I
[...]
            =3F81
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
